src/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&display=swap');
/* @import './base.css'; */
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body,
  #root {
    height: -webkit-fill-available;
  }

  #app {
    font-style: normal;
    margin: 0;
    @apply no-scrollbar h-screen w-screen overflow-y-auto bg-white font-sans text-slate-10 p-safe;
  }

  svg {
    @apply shrink-0;
  }

  .capitalize-first::first-letter {
    text-transform: capitalize;
  }

  .app-account-name-admin {
    background: linear-gradient(90deg, #07334a 0%, #0095d1 100%);
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
  }

  .app-account-name-staff {
    background: linear-gradient(90deg, #3f4e19 0%, #9bbe24 100%);
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
  }

  /* Hide scrollbar for Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

/* Vue-Toastification */
.Vue-Toastification__container {
  @apply !items-center !pt-safe;
}
.Vue-Toastification__toast {
  @apply !mt-4 !flex !h-auto !min-h-10 !max-w-[328px] !items-center !justify-start !gap-2 !rounded !border !px-2 !py-2 !font-sans;
}
.Vue-Toastification__toast-body {
  @apply !text-sm !font-medium;
}
.Vue-Toastification__close-button {
  @apply !text-inherit;
}
/* Vue-Toastification success */
.Vue-Toastification__toast--success {
  @apply !border-grass-7 !bg-grass-1 !text-grass-7;
  &::before {
    @apply !h-6;
    content: url('data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M16.2806%209.21937C16.3504%209.28903%2016.4057%209.37175%2016.4434%209.46279C16.4812%209.55384%2016.5006%209.65144%2016.5006%209.75C16.5006%209.84856%2016.4812%209.94616%2016.4434%2010.0372C16.4057%2010.1283%2016.3504%2010.211%2016.2806%2010.2806L11.0306%2015.5306C10.961%2015.6004%2010.8783%2015.6557%2010.7872%2015.6934C10.6962%2015.7312%2010.5986%2015.7506%2010.5%2015.7506C10.4014%2015.7506%2010.3038%2015.7312%2010.2128%2015.6934C10.1218%2015.6557%2010.039%2015.6004%209.96938%2015.5306L7.71938%2013.2806C7.57865%2013.1399%207.49959%2012.949%207.49959%2012.75C7.49959%2012.551%207.57865%2012.3601%207.71938%2012.2194C7.86011%2012.0786%208.05098%2011.9996%208.25%2011.9996C8.44903%2011.9996%208.6399%2012.0786%208.78063%2012.2194L10.5%2013.9397L15.2194%209.21937C15.289%209.14964%2015.3718%209.09432%2015.4628%209.05658C15.5538%209.01884%2015.6514%208.99941%2015.75%208.99941C15.8486%208.99941%2015.9462%209.01884%2016.0372%209.05658C16.1283%209.09432%2016.211%209.14964%2016.2806%209.21937ZM21.75%2012C21.75%2013.9284%2021.1782%2015.8134%2020.1068%2017.4168C19.0355%2019.0202%2017.5127%2020.2699%2015.7312%2021.0078C13.9496%2021.7458%2011.9892%2021.9389%2010.0979%2021.5627C8.20656%2021.1865%206.46928%2020.2579%205.10571%2018.8943C3.74215%2017.5307%202.81355%2015.7934%202.43735%2013.9021C2.06114%2012.0108%202.25422%2010.0504%202.99218%208.26884C3.73013%206.48726%204.97982%204.96451%206.58319%203.89317C8.18657%202.82183%2010.0716%202.25%2012%202.25C14.585%202.25273%2017.0634%203.28084%2018.8913%205.10872C20.7192%206.93661%2021.7473%209.41498%2021.75%2012ZM20.25%2012C20.25%2010.3683%2019.7661%208.77325%2018.8596%207.41655C17.9531%206.05984%2016.6646%205.00242%2015.1571%204.37799C13.6497%203.75357%2011.9909%203.59019%2010.3905%203.90852C8.79017%204.22685%207.32016%205.01259%206.16637%206.16637C5.01259%207.32015%204.22685%208.79016%203.90853%2010.3905C3.5902%2011.9908%203.75358%2013.6496%204.378%2015.1571C5.00242%2016.6646%206.05984%2017.9531%207.41655%2018.8596C8.77326%2019.7661%2010.3683%2020.25%2012%2020.25C14.1873%2020.2475%2016.2843%2019.3775%2017.8309%2017.8309C19.3775%2016.2843%2020.2475%2014.1873%2020.25%2012Z%22%20fill%3D%22%235BA30D%22%2F%3E%3C%2Fsvg%3E');
  }
}
/* Vue-Toastification error */
.Vue-Toastification__toast--error {
  @apply !border-tomato-7 !bg-tomato-1 !text-tomato-7;
  &::before {
    @apply !h-6;
    content: url('data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M15.5306%209.53063L13.0603%2012L15.5306%2014.4694C15.6003%2014.5391%2015.6556%2014.6218%2015.6933%2014.7128C15.731%2014.8039%2015.7504%2014.9015%2015.7504%2015C15.7504%2015.0985%2015.731%2015.1961%2015.6933%2015.2872C15.6556%2015.3782%2015.6003%2015.4609%2015.5306%2015.5306C15.4609%2015.6003%2015.3782%2015.6556%2015.2872%2015.6933C15.1961%2015.731%2015.0986%2015.7504%2015%2015.7504C14.9015%2015.7504%2014.8039%2015.731%2014.7128%2015.6933C14.6218%2015.6556%2014.5391%2015.6003%2014.4694%2015.5306L12%2013.0603L9.53063%2015.5306C9.46095%2015.6003%209.37822%2015.6556%209.28718%2015.6933C9.19613%2015.731%209.09855%2015.7504%209%2015.7504C8.90146%2015.7504%208.80388%2015.731%208.71283%2015.6933C8.62179%2015.6556%208.53906%2015.6003%208.46938%2015.5306C8.3997%2015.4609%208.34442%2015.3782%208.30671%2015.2872C8.269%2015.1961%208.24959%2015.0985%208.24959%2015C8.24959%2014.9015%208.269%2014.8039%208.30671%2014.7128C8.34442%2014.6218%208.3997%2014.5391%208.46938%2014.4694L10.9397%2012L8.46938%209.53063C8.32865%209.38989%208.24959%209.19902%208.24959%209C8.24959%208.80098%208.32865%208.61011%208.46938%208.46937C8.61011%208.32864%208.80098%208.24958%209%208.24958C9.19903%208.24958%209.3899%208.32864%209.53063%208.46937L12%2010.9397L14.4694%208.46937C14.5391%208.39969%2014.6218%208.34442%2014.7128%208.3067C14.8039%208.26899%2014.9015%208.24958%2015%208.24958C15.0986%208.24958%2015.1961%208.26899%2015.2872%208.3067C15.3782%208.34442%2015.4609%208.39969%2015.5306%208.46937C15.6003%208.53906%2015.6556%208.62178%2015.6933%208.71283C15.731%208.80387%2015.7504%208.90145%2015.7504%209C15.7504%209.09855%2015.731%209.19613%2015.6933%209.28717C15.6556%209.37822%2015.6003%209.46094%2015.5306%209.53063ZM21.75%2012C21.75%2013.9284%2021.1782%2015.8134%2020.1068%2017.4168C19.0355%2019.0202%2017.5127%2020.2699%2015.7312%2021.0078C13.9496%2021.7458%2011.9892%2021.9389%2010.0979%2021.5627C8.20656%2021.1865%206.46928%2020.2579%205.10571%2018.8943C3.74215%2017.5307%202.81355%2015.7934%202.43735%2013.9021C2.06114%2012.0108%202.25422%2010.0504%202.99218%208.26884C3.73013%206.48726%204.97982%204.96451%206.58319%203.89317C8.18657%202.82183%2010.0716%202.25%2012%202.25C14.585%202.25273%2017.0634%203.28084%2018.8913%205.10872C20.7192%206.93661%2021.7473%209.41498%2021.75%2012ZM20.25%2012C20.25%2010.3683%2019.7661%208.77325%2018.8596%207.41655C17.9531%206.05984%2016.6646%205.00242%2015.1571%204.37799C13.6497%203.75357%2011.9909%203.59019%2010.3905%203.90852C8.79017%204.22685%207.32016%205.01259%206.16637%206.16637C5.01259%207.32015%204.22685%208.79016%203.90853%2010.3905C3.5902%2011.9908%203.75358%2013.6496%204.378%2015.1571C5.00242%2016.6646%206.05984%2017.9531%207.41655%2018.8596C8.77326%2019.7661%2010.3683%2020.25%2012%2020.25C14.1873%2020.2475%2016.2843%2019.3775%2017.8309%2017.8309C19.3775%2016.2843%2020.2475%2014.1873%2020.25%2012Z%22%20fill%3D%22%23DD3F30%22%2F%3E%3C%2Fsvg%3E');
  }
}

